--- a/Portfólio/index.html
+++ b/Portfólio/index.html
@@ -55,146 +55,14 @@
       </header>
 
       <div class="menu-spacing"></div>
-
       <section class="acordeon">
-        <button class="trigger" type="button">IDIOMAS</button>
-        <div class="content">
-          <ul class="languages">
-            <li>Português</li>
-            <li>Inglês</li>
-            <li>Espanhol</li>
-          </ul>
-        </div>
-      </section>
-
-      <section class="acordeon">
-        <button class="trigger" type="button">PORTFÓLIO</button>
-        <div class="content">
-          <ul class="portfolio">
-            <li>
-              <h3 class="title github">1º Projeto</h3>
-              <a href="https://github.com/Juliocesarsenai/Landing_Page"
-                >Minha Primeira Landing Page</a
-              >
-            </li>
-            <li>
-              <h3 class="title github">2º Projeto</h3>
-              <a href="https://github.com/Juliocesarsenai/CocaCola"
-                >Coca Cola</a
-              >
-            </li>
-            <li>
-              <h3 class="title github">3º Projeto</h3>
-              <a href="https://github.com/Juliocesarsenai/Banco_de_Dados_Python"
-                >Banco de Dados com Python</a
-              >
-            </li>
-            <li>
-              <h3 class="title github">4º Projeto</h3>
-              <a
-                href="https://github.com/Juliocesarsenai/Atividade_Pontuada_JavaSpringBoot"
-                >Java Spring Boot</a
-              >
-            </li>
-            <li>
-              <h3 class="title github">5º Projeto</h3>
-              <a href="https://github.com/Juliocesarsenai/Tela-de-Login"
-                >Tela de Login</a
-              >
-            </li>
-            <li>
-              <h3 class="title github">6º Projeto</h3>
-              <a href="https://github.com/Juliocesarsenai/Pokedex">Pokedex</a>
-            </li>
-          </ul>
-        </div>
-      </section>
-
-      <section class="acordeon">
-        <button class="trigger" type="button">
-          <h2>FORMAÇÕES</h2>
-        </button>
-        <div class="content">
-          <ul class="experience">
-            <li>
-              <p class="title">
-                Curso Técnico de Análise e Desenvolvimento de Sistemas
-              </p>
-              <p class="period">Janeiro 2024 - Atualmente</p>
-              <p class="text">
-                Atualmente, eu estou cursando o 3º semestre do curso de Análise
-                e Desenvolvimento de Sistemas no SENAI Dendezeiros, onde estou
-                aprendendo todos os pilares de Desenvolvimento de Software e
-                estou sempre em busca de novas formações e aprendizados.
-              </p>
-            </li>
-
-            <li>
-              <p class="title">Curso de JavaScript</p>
-              <p class="period">Abril 2025 - Maio 2025</p>
-              <p class="text">
-                Eu fiz um curso da plataforma Dio que ensina os conceitos mais
-                importantes de JavaScript, por meio desse curso, aprendi Lógica
-                de Programação, programação orientada a Objetos, conceitos
-                avançados de JavaScript e por meio dos conhecimentos obtidos no
-                curso, eu fiz o meu portfólio com a ajuda do professor.
-              </p>
-            </li>
-          </ul>
-        </div>
-      </section>
-
-      <section class="acordeon">
-        <button class="trigger" type="button">
-          <h2>SKILLS</h2>
-        </button>
+        <button class="trigger" type="button"><h2>SKILLS</h2></button>
         <div class="content">
           <div class="skills">
             <section class="tools">
               <h2>Ferramentas</h2>
-              <ul>
-                <li>
-                  <img
-                    src="components/img/languages/html.svg"
-                    alt="Html"
-                    title="Html"
-                  />
-                </li>
-                <li>
-                  <img
-                    src="components/img/languages/css.svg"
-                    alt="CSS"
-                    title="Css"
-                  />
-                </li>
-                <li>
-                  <img
-                    src="components/img/languages/javascript.svg"
-                    alt="JavaScript"
-                    title="JavaScript"
-                  />
-                </li>
-                <li>
-                  <img
-                    src="components/img/languages/java.svg"
-                    alt="Java"
-                    title="Java"
-                  />
-                </li>
-                <li>
-                  <img
-                    src="components/img/languages/python.svg"
-                    alt="Python"
-                    title="Python"
-                  />
-                </li>
-                <li>
-                  <img
-                    src="components/img/languages/github.svg"
-                    alt="Github"
-                    title="Github"
-                  />
-                </li>
+              <ul id="profile.skills.hardSkills">
+                Loading...
               </ul>
             </section>
 
@@ -209,6 +77,35 @@
               </ul>
             </section>
           </div>
+        </div>
+      </section>
+
+      <section class="acordeon">
+        <button class="trigger" type="button">IDIOMAS</button>
+        <div class="content">
+          <ul class="languages" id="profile.languages">
+            <li>Loading...</li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="acordeon">
+        <button class="trigger" type="button">PORTFÓLIO</button>
+        <div class="content">
+          <ul class="portfolio" id="profile.portfolio">
+            Loading...
+          </ul>
+        </div>
+      </section>
+
+      <section class="acordeon">
+        <button class="trigger" type="button">
+          <h2>FORMAÇÕES</h2>
+        </button>
+        <div class="content">
+          <ul class="experience" id="profileFormacoes">
+            Loading...
+          </ul>
         </div>
       </section>
     </main>
