Salvar alterações finais

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./components/css/portfolio.css" />
     <link rel="stylesheet" href="./components/css/skills.css" />
     <link rel="stylesheet" href="./components/fonts/neue-machina-regular.otf" />
+    <link rel="stylesheet" href="./components/css/footer.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
       rel="stylesheet"
@@ -44,12 +45,12 @@
           <p class="perfil" id="profile-job">Loading...</p>
           <p class="local" id="profile-local">Loading...</p>
           <p class="numero">
-            <a href="tel:(71)982873750" id="profile-phone">Loading...</a>
+            <a href="tel:+5571982873750" id="profile-phone">Loading...</a>
           </p>
           <p class="email">
-            <a href="mailto:juliocesarbonfim2005@gmail.com" id="profile-email"
-              >loading@gmail.com</a
-            >
+            <a href="mailto:juliocesarbonfim2005@gmail.com" id="profile-email">
+              loading@gmail.com
+            </a>
           </p>
         </div>
       </header>
@@ -61,14 +62,14 @@
           <div class="skills">
             <section class="tools">
               <h2>Ferramentas</h2>
-              <ul id="profile.skills.hardSkills">
+              <ul id="profile-skills-hardSkills">
                 Loading...
               </ul>
             </section>
 
             <section class="personal">
               <h2>Personal Skills</h2>
-              <ul id="profile.skills.softSkills">
+              <ul id="profile-skills-softSkills">
                 <li>Loading...</li>
                 <li>Loading...</li>
                 <li>Loading...</li>
@@ -83,7 +84,7 @@
       <section class="acordeon">
         <button class="trigger" type="button">IDIOMAS</button>
         <div class="content">
-          <ul class="languages" id="profile.languages">
+          <ul class="languages" id="profile-languages">
             <li>Loading...</li>
           </ul>
         </div>
@@ -92,7 +93,7 @@
       <section class="acordeon">
         <button class="trigger" type="button">PORTFÓLIO</button>
         <div class="content">
-          <ul class="portfolio" id="profile.portfolio">
+          <ul class="portfolio" id="profile-portfolio">
             Loading...
           </ul>
         </div>
@@ -103,11 +104,17 @@
           <h2>FORMAÇÕES</h2>
         </button>
         <div class="content">
-          <ul class="experience" id="profileFormacoes">
+          <ul class="experience" id="profile-formacoes">
             Loading...
           </ul>
         </div>
       </section>
+
+      <footer>
+        <a href="https://www.dio.me/" target="_blank">
+          <img src="components/img/dio.svg" alt="DIO" />
+        </a>
+      </footer>
     </main>
 
     <script src="components/js/acordeon.js"></script>
